# simview

./: .gitignore  LICENSE  README.md  install_venv.sh  mulitPlotCursor.py  pyproject.toml  run_simview.sh  simUtils.py  simUtilsBrkr.py  simUtilsNMRScopeB.py  simView.py  visuSim.py  visusimForm.ui
simview_app/: calculations.py  constants.py  data_loading.py  exporting.py  interaction.py
tests/: test_gui_e2e.py  test_simview_logic.py
utils/: dialog.py  multiplot.py  simUtilsBrkr.py  simUtilsNMRScopeB.py
widgets/: mulitPlotCursor.py
