[tool.poetry]
name = "visusim"
version = "0.1.0"
description = "Visualisation tool for Bruker simulations"
authors = ["Jiri Vitous <vitous@isibrno.cz>"]
license = "BSD"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.3.2"
xmltodict = "^0.14.2"
pyqt6 = "^6.9.1"
pyqtgraph = "^0.13.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
