[tool.poetry]
name = "visusim"
version = "0.1.0"
description = "Visualisation tool for Bruker simulations"
authors = ["Jiri Vitous <vitous@isibrno.cz>"]
license = "BSD"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.3.2"
xmltodict = "^0.14.2"
pyqt6 = "^6.9.1"
pyqtgraph = "^0.14.0"
ruff = ">0.11"
pytest = ">6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff.lint]
select = [
    "ANN",
    "E",
    "W",    # pycodestyle
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
    "PERF", # Perflint
    "C4",   # Flake8 comprehensions
    "RET",  # Flake8 return
    "FBT",  # Flake8 boolean simplifications
    "LOG",  # Flake8 logging
    "PL",   # Flake8 pylint
    "B9",   # Bugbear additional checks
    "TC",
    "RUF",
    "PT",
    "FLY",
    "NPY",
]
ignore = [
    "PLR2004",
    "PLR0915",
    "PLR0913",
    "PLR0912",
    "PLR0911",
    "PLC0415",
    "RUF005",
]
# select = [
#     # pycodestyle
#     "E",
#     # Pyflakes
#     "F",
#     # pyupgrade
#     "UP",
#     # flake8-bugbear
#     "B",
#     # flake8-simplify
#     "SIM",
#     # isort
#     "I",
#     # Perflint
#     "PERF",
# ]


[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
